1.Новый функционал контроллера User 2.Добавлено сохранение в csv файл параметров стратегии